--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -31,7 +31,7 @@ loglevel 3
     mkdir /sd-ext 0771 system system
     mount tmpfs tmpfs /sqlite_stmt_journals size=4m
 
-    mount rootfs rootfs / ro remount
+    mount rootfs rootfs / rw remount
 
     write /proc/sys/kernel/panic_on_oops 1
     write /proc/sys/kernel/hung_task_timeout_secs 0
@@ -47,11 +47,6 @@ loglevel 3
     chmod 0777 /dev/cpuctl/tasks
     write /dev/cpuctl/cpu.shares 1024
 
-    mkdir /dev/cpuctl/fg_boost
-    chown system system /dev/cpuctl/fg_boost/tasks
-    chmod 0777 /dev/cpuctl/fg_boost/tasks
-    write /dev/cpuctl/fg_boost/cpu.shares 1024
-
     mkdir /dev/cpuctl/bg_non_interactive
     chown system system /dev/cpuctl/bg_non_interactive/tasks
     chmod 0777 /dev/cpuctl/bg_non_interactive/tasks
@@ -61,7 +56,7 @@ loglevel 3
 # mount mtd partitions
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
     mount yaffs2 mtd@system /system
-    mount yaffs2 mtd@system /system ro remount
+    mount yaffs2 mtd@system /system rw remount
 
     # We chown/chmod /data again so because mount is run as root + defaults
     mount yaffs2 mtd@userdata /data nosuid nodev
@@ -69,8 +64,8 @@ loglevel 3
     chmod 0771 /data
 
     # Mount compressed filesystems
-    mount squashfs loop@/system/modules/modules.sqf /system/modules ro
-    mount squashfs loop@/system/xbin/xbin.sqf /system/xbin ro
+    mount squashfs loop@/system/modules/modules.sqf /system/modules rw
+    mount squashfs loop@/system/xbin/xbin.sqf /system/xbin rw
 
     # Create dump dir and collect dumps.
     # Do this before we mount cache so eventually we can use cache for
@@ -251,7 +246,6 @@ service console /system/bin/sh
 
 # adbd is controlled by the persist.service.adb.enable system property
 service adbd /sbin/adbd
-    disabled
 
 # adbd on at boot in emulator
 on property:ro.kernel.qemu=1
@@ -290,18 +284,12 @@ service media /system/bin/mediaserver
     user media
     group system audio camera graphics inet net_bt net_bt_admin
 
-service bootsound /system/bin/playmp3
-    user media
-    group audio
-    oneshot
-
 service bootanim /system/bin/bootanimation
     user graphics
     group graphics
-    disabled
     oneshot
 
-service dbus /system/bin/dbus-daemon --system --nofork
+service dbus /system/bin/dbus-daemon --system
     socket dbus stream 660 bluetooth bluetooth
     user bluetooth
     group bluetooth net_bt_admin
@@ -312,51 +300,45 @@ service bluetoothd /system/bin/bluetoothd -n
     # init.rc does not yet support applying capabilities, so run as root and
     # let bluetoothd drop uid to bluetooth with the right linux capabilities
     group bluetooth net_bt_admin misc
-    disabled
 
 service hfag /system/bin/sdptool add --channel=10 HFAG
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 
 service hsag /system/bin/sdptool add --channel=11 HSAG
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 
 service opush /system/bin/sdptool add --channel=12 OPUSH
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 
 service pbap /system/bin/sdptool add --channel=19 PBAP
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 
 service installd /system/bin/installd
     socket installd stream 600 system system
 
 # Never flash the recovery!
-#service flash_recovery /system/etc/install-recovery.sh
-#    oneshot
+service flash_recovery /system/etc/install-recovery.sh
+oneshot
+disabled
 
 service racoon /system/bin/racoon
     socket racoon stream 600 system system
     # racoon will setuid to vpn after getting necessary resources.
     group net_admin
-    disabled
     oneshot
 
 service mtpd /system/bin/mtpd
     socket mtpd stream 600 system system
     user vpn
     group vpn net_admin net_raw
-    disabled
     oneshot
 
 service keystore /system/bin/keystore /data/misc/keystore
@@ -366,41 +348,32 @@ service keystore /system/bin/keystore /data/misc/keystore
 
 service dumpstate /system/bin/dumpstate -s
     socket dumpstate stream 0660 shell log
-    disabled
     oneshot
 
 # Execute files in /etc/init.d before booting
 service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/etc/init.d
-    disabled
     oneshot
 
 # Clean shutdown
 service reboot /system/bin/shutdown -r
-    disabled
     oneshot
 
 service poweroff /system/bin/shutdown
-    disabled
 
 # USB internet sharing
 service dnsmasq /system/bin/logwrapper /system/bin/dnsmasq -d
-    disabled
 
 service tether_on /system/bin/logwrapper /system/bin/sh /system/bin/usb-tether start
-    disabled
     oneshot
 
 service tether_off /system/bin/logwrapper /system/bin/sh /system/bin/usb-tether stop
-    disabled
     oneshot
 
 # Compcache
 service compcache_on /system/bin/logwrapper /system/bin/sh /system/bin/compcache start
-    disabled
     oneshot
 
 service compcache_off /system/bin/logwrapper /system/bin/sh /system/bin/compcache stop
-    disabled
     oneshot
 
 on property:persist.service.compcache=1
@@ -408,4 +381,3 @@ on property:persist.service.compcache=1
 
 on property:persist.service.compcache=0
     start compcache_off
-
