--- a/rootdir/etc/init.goldfish.rc
+++ b/rootdir/etc/init.goldfish.rc
@@ -1,16 +1,9 @@
 on boot
     setprop ARGH ARGH
-    setprop net.eth0.dns1 10.0.2.3
-    setprop net.gprs.local-ip 10.0.2.15
+    setprop net.eth0.dns1 8.8.8.8
     setprop ro.radio.use-ppp no
     setprop ro.build.product generic
     setprop ro.product.device generic
-
-# fake some battery state
-    setprop status.battery.state Slow
-    setprop status.battery.level 5
-    setprop status.battery.level_raw  50
-    setprop status.battery.level_scale 9
 
 # disable some daemons the emulator doesn't want
     stop dund
@@ -27,8 +20,8 @@ on boot
 # Login Service will insert these accounts into the database when
 # it is created (ie, after a data wipe).
 #
-#   setprop ro.config.hosted_account username@hosteddomain.org:password
-#   setprop ro.config.google_account username@gmail.com:password
+setprop ro.config.hosted_account username@hosteddomain.org:password
+setprop ro.config.google_account username@gmail.com:password
 #
 # You MUST have a Google account on the device, and you MAY
 # additionally have a hosted account.  No other configuration is
@@ -48,5 +41,5 @@ service qemud /system/bin/qemud
 # named by the androidboot.console kernel option
 # if not, is simply exit immediately
 
-service goldfish-logcat /system/bin/logcat -Q
+service goldfish-logcat /system/bin/logcat
     oneshot
